add app manifest

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,16 @@
 .bottom-list > ul > li{
     border-bottom: 2px solid red;
     border-width: thin;
+    cursor: pointer;
+}
+
+/* .weather .content :nth-child(2) > span {
+    background-color: red;
+    display: inline-block;
+} */
+
+.back {
+    display: none;
 }
 
 .content {
