--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,27 +2,48 @@
     /* margin: 0;
     padding: 0; */
     box-sizing: border-box;
+    font-family: 'Kumbh Sans', sans-serif;
 }
 .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    margin: 2em auto;
+    width: 40%;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    background-color: #fff;
+    /* padding: 1em; */
+    color: #737373;
+    box-shadow: 1px 2px 2px #aaa;
 }
 
-.left-column {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    /* background-color: blue; */
+.top {
+    text-align: center;
 }
 
 .bottom {
     border: 1px solid #fff;
     border-radius: 20px;
     background-color: #fff;
-    /* display: flex;
-    flex-direction: column; */
     padding: 1em;
     color: #737373;
     box-shadow: 1px 2px 2px #aaa;
+    max-height: 30em;
+    overflow-y: scroll;
+}
+
+.bottom::-webkit-scrollbar {
+    width: 5px;
+}
+
+.bottom::-webkit-scrollbar-track {
+    background: green;
+}
+
+.bottom::-webkit-scrollbar-thumb {
+    background: red;
+}
+
+.bottom::-webkit-scrollbar-thumb:hover {
+    background:blue;
 }
 
 .bottom-list > ul{
@@ -37,10 +58,9 @@
     cursor: pointer;
 }
 
-/* .weather .content :nth-child(2) > span {
-    background-color: red;
-    display: inline-block;
-} */
+.weather .content :nth-child(2) > span {
+    text-align: center;
+}
 
 .back {
     display: none;
@@ -54,6 +74,10 @@
 .content > p {
     display: flex;
     flex-direction: column;
+}
+
+.content  p:nth-child(1) > span {
+    margin: 6px;
 }
 
 .history {
