--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
 * {
-    /* margin: 0;
-    padding: 0; */
     box-sizing: border-box;
     font-family: 'Kumbh Sans', sans-serif;
 }
@@ -10,7 +8,6 @@
     border: 1px solid #fff;
     border-radius: 20px;
     background-color: #fff;
-    /* padding: 1em; */
     color: #737373;
     box-shadow: 1px 2px 2px #aaa;
 }
@@ -77,7 +74,7 @@
 }
 
 .content  p:nth-child(1) > span {
-    margin: 6px;
+    margin: 7px;
 }
 
 .history {
@@ -94,4 +91,15 @@
 
 .history-details {
     display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+    .container {
+        width: 100%;
+        max-height: 100vh;
+    }
+
+    .bottom {
+        max-height: 100vh;
+    }
 }
