--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,34 @@
     text-align: center;
 }
 
+.search-div {
+    display: flex;
+    border-radius: 20px;
+    box-shadow: 1px 2px 2px #aaa;
+    height: 3em;
+}
+
+.search-input {
+    border: 2px solid #fff;
+    padding: 8px;
+    border-radius: 20px;
+    margin-right: 3px;
+    width: 100%;
+    font-size: 20px;
+}
+
+.search-btn {
+    cursor: pointer;
+    /* width: 30px; */
+}
+
+.fa-search-location {
+    font-size: 2em;
+    text-align: center;
+    padding: 10px;
+    color: hotpink;
+}
+
 .bottom {
     border: 1px solid #fff;
     border-radius: 20px;
