--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     width: 40%;
     border: 1px solid #fff;
     border-radius: 20px;
-    color: #737373;
+    color: black;
     background-color: #88d6d8;
     box-shadow: 1px 2px 2px #aaa;
 }
@@ -56,7 +56,7 @@ body {
     border-radius: 20px;
     background-color: #fff;
     padding: 1em;
-    color: #737373;
+    color: black;
     box-shadow: 1px 2px 2px #aaa;
     max-height: 30em;
     overflow-y: scroll;
